--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "mini-css-extract-plugin": "^0.8.2",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.2",
+    "style-loader": "^1.3.0",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.0"
+  },
+  "dependencies": {
+    "vue": "^3.2.33"
   }
 }
